[package]
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "f411-rtic"
edition = "2021"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
cortex-m = "0.7.1"
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ssd1306 = "0.7.0"
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-audio = "0.1.0"
usbd-serial = "0.1.0"
usbd-hid = "0.5.0"
embedded-hal = "0.2.4"
dwt-systick-monotonic = "1.0.0"
rtic-monotonic = "1.0.0"
fugit = "0.3.3"
heapless = "0.7.3"
postcard = "0.7.2"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
ws2812-spi = "0.4.0"
smart-leds-trait = "0.2.0"
smart-leds = "0.3.0"

[dependencies.stm32f4xx-hal]
# version = "0.10.1"
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["rt", "stm32f411", "usb_fs"]

# [patch.crates-io]
# stm32f4xx-hal = { path = "../stm32f4xx-hal" }

[features]
# set logging levels here
default = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }