[package]
# TODO(1) fix `authors` if you didn't use `cargo-generate`
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.1.0"

[[test]]
name = "gpio"
harness = false

[[test]]
name = "other"
harness = false

[dependencies]
f411-rtic = { path = ".." }
cortex-m = "0.7.1"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt" ] }

[dependencies.stm32f4xx-hal]
# version = "0.10.1"
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["rt", "stm32f411", "usb_fs"]

# [dependencies.stm32f4xx-hal]
# version = "0.8.3"
# features = ["rt", "stm32f411"]

[features]
# set logging levels here
default = []
